# testing-kubernetes

./: .dockerignore  .env  .gitignore  .secrets.env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yaml
.moon/: toolchain.yml  workspace.yml
apps/server-v1/: .dockerignore  .gitignore  docker-compose.yml  moon.yml  pyproject.toml
apps/server-v2/: .dockerignore  Cargo.toml  Dockerfile  moon.yml
apps/server-v2/migration/src/: lib.rs  m20250809_185819_create_users.rs
apps/server-v2/src/: crud.rs  lib.rs  main.rs  schemas.rs  tests.rs
apps/server-v2/src/api/: main.rs
apps/server-v2/src/api/middlewares/: logs.rs  utils.rs
apps/server-v2/src/api/routes/: users.rs
apps/server-v2/src/core/: cache.rs  config.rs  database.rs
apps/server-v2/src/models/: users.rs
apps/server-v2/src/schemas/: api.rs  users.rs
apps/server-v2/src/tests/: utils.rs
apps/server-v2/src/tests/api/: routes.rs
apps/server-v2/src/tests/api/routes/: test_users.rs
apps/server-v2/src/tests/crud/: test_users.rs
apps/server-v2/src/tests/utils/: api.rs  users.rs  utils.rs
k8s/: create-namespaces.yaml
k8s/development/: api-deployment.yaml  api-ingress.yaml  api-secrets.yaml  api-service.yaml  api-v1-deployment.yaml  api-v1-service.yaml  api-v2-deployment.yaml  api-v2-service.yaml  debug-pod.yaml  grafana-configmap.yaml  grafana-deployment.yaml  grafana-pvc.yaml  grafana-secrets.yaml  grafana-service.yaml  postgres-configmap.yaml  postgres-secrets.yaml  postgres-service.yaml  postgres-statefulset.yaml  questdb-configmap.yaml  questdb-deployment.yaml  questdb-pvc.yaml  questdb-secrets.yaml  questdb-service.yaml  redis-configmap.yaml  redis-secrets.yaml  (+2 more)
scripts/: deploy-k8s.sh
src/: cache.py  config.py  crud.py  database.py  main.py  models.py  routes.py
v1/: pyproject.toml
v1/src/: main.py  models.py  schemas.py
v1/src/core/: config.py
v2/: .dockerignore  Cargo.toml  Dockerfile
v2/migration/src/: lib.rs  m20250809_185819_create_users.rs
v2/src/: api.rs  core.rs  crud.rs  main.rs  models.rs
v2/src/api/: main.rs  middlewares.rs  routes.rs
v2/src/api/routes/: users.rs
v2/src/core/: cache.rs  config.rs  database.rs
v2/src/models/: users.rs
v2/src/schemas/: users.rs
(+16 files in other folders)
