[project]
name = "api-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "sqlalchemy>=2.0.41",
    "psycopg2-binary>=2.9.10",
    "redis>=6.2.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "pydantic-settings>=2.10.1",
    "questdb>=3.0.0",
]
