[package]
name = "v2"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.31"
log = "0.4.27"
questdb-rs = { version = "5.0.0", features = ["chrono_timestamp"] }
rand = "0.9.2"
sea-orm = { version = "1.1.14", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
secp256k1 = "0.31.1"
tokio = { version = "1.47.0", features = ["full"] }
actix-cors = "0.7.1"
env_logger = "0.11.8"
redis = { version = "0.32.4", features = ["tokio-rustls-comp"] }
rustls = "0.23.31"
serde_json = "1.0.142"
chrono = "0.4.41"
fastrand = "2.3.0"

# For migrations
migration = { path = "migration" }
